// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Settings should change filter option 1`] = `
<div>
  <div
    style="width: 100%; background-color: rgb(245, 245, 245); padding: 2.5rem;"
  >
    <div
      class="MuiBox-root MuiBox-root-273"
      style="height: 50px; margin-bottom: 13px; width: 100%;"
    >
      <div
        class="MuiBox-root MuiBox-root-274"
        style="display: flex; align-items: center; justify-content: space-between;"
      >
        <div>
          <div
            class="MuiBox-root MuiBox-root-275"
            style="display: flex; align-items: center; margin-top: 5px;"
          >
            <h2
              class="MuiTypography-root MuiTypography-h1"
              style="color: rgb(68, 68, 68); font-size: 2.25rem; font-weight: 600; letter-spacing: 0; margin-right: 0.5rem;"
            >
              Account Settings
            </h2>
          </div>
        </div>
      </div>
    </div>
    <div
      class="makeStyles-tableWrapper-234"
    >
      <div
        class="makeStyles-filterContainer-242 makeStyles-filterContainerTopPadding-251"
      >
        <div
          class="makeStyles-statusFilter-243"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text"
            data-testid="filter-status-opt"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Profile
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-activeFilter-244"
            data-testid="filter-status-opt"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Password
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-467 makeStyles-box-276"
    >
      <div
        class="makeStyles-formContainer-278 "
      >
        <div
          class="makeStyles-formContainerWrapper-277"
        >
          <div
            class="makeStyles-currentPasswordSpacing-297"
          >
            <div
              class="MuiFormControl-root makeStyles-formControl-320 makeStyles-loginLabels-318 "
            >
              <h1
                class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
              >
                Current Password
                 
              </h1>
              <div
                data-testid="confirm-password-wrapper"
              >
                <div
                  aria-describedby="confirm-password-password"
                  class="MuiFormControl-root MuiTextField-root makeStyles-textField-319 MuiFormControl-fullWidth"
                >
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
                  >
                    <div
                      class="MuiInputAdornment-root     makeStyles-loginIcons-317 MuiInputAdornment-positionStart"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
                        />
                      </svg>
                    </div>
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                      data-testid="current-password"
                      name="currentPassword"
                      placeholder="Current Password"
                      required=""
                      type="password"
                      value=""
                    />
                    <div
                      class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                    >
                      <button
                        aria-label="toggle-visibility"
                        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd"
                        data-testid="toggle-visibility-button"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <svg
                            class=" makeStyles-inactiveIcon-470 makeStyles-inactiveIcon-470"
                          >
                            visibility-off.svg
                          </svg>
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </button>
                    </div>
                    <fieldset
                      aria-hidden="true"
                      class="PrivateNotchedOutline-root-347 MuiOutlinedInput-notchedOutline"
                      style="padding-left: 8px;"
                    >
                      <legend
                        class="PrivateNotchedOutline-legend-348"
                        style="width: 0.01px;"
                      >
                        <span>
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiFormControl-root makeStyles-formControl-320 makeStyles-loginLabels-318 "
          >
            <h1
              class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
            >
              New Password
               
            </h1>
            <div
              data-testid="confirm-password-wrapper"
            >
              <div
                aria-describedby="confirm-password-password"
                class="MuiFormControl-root MuiTextField-root makeStyles-textField-319 MuiFormControl-fullWidth"
              >
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
                >
                  <div
                    class="MuiInputAdornment-root     makeStyles-loginIcons-317 MuiInputAdornment-positionStart"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
                      />
                    </svg>
                  </div>
                  <input
                    aria-invalid="false"
                    autocomplete="off"
                    class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                    data-testid="password"
                    name="newPassword"
                    placeholder="New Password"
                    required=""
                    type="password"
                    value=""
                  />
                  <div
                    class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                  >
                    <button
                      aria-label="toggle-visibility"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd"
                      data-testid="toggle-visibility-button"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <svg
                          class=" makeStyles-inactiveIcon-470 makeStyles-inactiveIcon-470"
                        >
                          visibility-off.svg
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-347 MuiOutlinedInput-notchedOutline"
                    style="padding-left: 8px;"
                  >
                    <legend
                      class="PrivateNotchedOutline-legend-348"
                      style="width: 0.01px;"
                    >
                      <span>
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
          </div>
          <p
            class="MuiTypography-root makeStyles-inputSubtitle-476 MuiTypography-body1"
          >
            Password must have at least 8 characters, one lowercase letter, one uppercase letter, one number and one symbol.
          </p>
          <div
            class="MuiFormControl-root makeStyles-formControl-320 makeStyles-loginLabels-318 "
          >
            <h1
              class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
            >
              Confirm New Password
               
            </h1>
            <div
              data-testid="confirm-password-wrapper"
            >
              <div
                aria-describedby="confirm-password-password"
                class="MuiFormControl-root MuiTextField-root makeStyles-textField-319 MuiFormControl-fullWidth"
              >
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
                >
                  <div
                    class="MuiInputAdornment-root     makeStyles-loginIcons-317 MuiInputAdornment-positionStart"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
                      />
                    </svg>
                  </div>
                  <input
                    aria-invalid="false"
                    autocomplete="off"
                    class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                    data-testid="confirm-password"
                    name="confirmPassword"
                    placeholder="Confirm New Password"
                    required=""
                    type="password"
                    value=""
                  />
                  <div
                    class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                  >
                    <button
                      aria-label="toggle-visibility"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd"
                      data-testid="toggle-visibility-button"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <svg
                          class=" makeStyles-inactiveIcon-470 makeStyles-inactiveIcon-470"
                        >
                          visibility-off.svg
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-347 MuiOutlinedInput-notchedOutline"
                    style="padding-left: 8px;"
                  >
                    <legend
                      class="PrivateNotchedOutline-legend-348"
                      style="width: 0.01px;"
                    >
                      <span>
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="makeStyles-formButtonWrapper-291 makeStyles-passwordButtonWrapper-292"
        >
          <span
            class="makeStyles-noOutline-375"
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-discardButton-377 MuiButton-textPrimary Mui-disabled Mui-disabled"
              data-testid="discard-changes-btn"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Discard Changes
              </span>
            </button>
          </span>
          <span
            class=""
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained false makeStyles-nextButton-376 makeStyles-noPadding-373  MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge Mui-disabled Mui-disabled"
              data-testid="next-changes-btn"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <span
                  class="makeStyles-textWrapper-466"
                >
                  Save Changes
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Settings should render 1`] = `
<div>
  <div
    style="width: 100%; background-color: rgb(245, 245, 245); padding: 2.5rem;"
  >
    <div
      class="MuiBox-root MuiBox-root-40"
      style="height: 50px; margin-bottom: 13px; width: 100%;"
    >
      <div
        class="MuiBox-root MuiBox-root-41"
        style="display: flex; align-items: center; justify-content: space-between;"
      >
        <div>
          <div
            class="MuiBox-root MuiBox-root-42"
            style="display: flex; align-items: center; margin-top: 5px;"
          >
            <h2
              class="MuiTypography-root MuiTypography-h1"
              style="color: rgb(68, 68, 68); font-size: 2.25rem; font-weight: 600; letter-spacing: 0; margin-right: 0.5rem;"
            >
              Account Settings
            </h2>
          </div>
        </div>
      </div>
    </div>
    <div
      class="makeStyles-tableWrapper-1"
    >
      <div
        class="makeStyles-filterContainer-9 makeStyles-filterContainerTopPadding-18"
      >
        <div
          class="makeStyles-statusFilter-10"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-activeFilter-11"
            data-testid="filter-status-opt"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Profile
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text"
            data-testid="filter-status-opt"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Password
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-46 makeStyles-box-43"
    >
      <div
        class="makeStyles-formContainer-45 "
      >
        <div
          class="makeStyles-formContainerWrapper-44"
        >
          <div
            class="makeStyles-profileUploadWrapper-60"
          >
            <div
              class="makeStyles-profileUploadAvatarPosition-61"
            >
              <div
                class="MuiAvatar-root MuiAvatar-circle makeStyles-avatarSettings-73 makeStyles-avatarWrapper-67 MuiAvatar-colorDefault"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root makeStyles-missingAvatarSettings-77"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                  />
                </svg>
              </div>
            </div>
            <div
              class="makeStyles-profileUploadInput-62"
            >
              <div
                class="MuiFormControl-root makeStyles-formControl-87 "
              >
                <h1
                  class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                >
                  Profile Image
                   
                </h1>
                <div>
                  <div
                    class="makeStyles-singleInputUploadItem-106"
                  >
                    <label
                      class="makeStyles-fileUploadWrapper-47 makeStyles-fileUploadWrapper-89"
                    >
                      <div
                        data-testid="file-upload-wrapper"
                      >
                        <div
                          class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                        >
                          <div
                            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                          >
                            <input
                              aria-invalid="false"
                              autocomplete="off"
                              class="MuiInputBase-input MuiOutlinedInput-input"
                              data-testid="file-upload-input"
                              name="fileUploader"
                              placeholder="Upload Photo"
                              type="file"
                              value=""
                            />
                            <fieldset
                              aria-hidden="true"
                              class="PrivateNotchedOutline-root-114 MuiOutlinedInput-notchedOutline"
                              style="padding-left: 8px;"
                            >
                              <legend
                                class="PrivateNotchedOutline-legend-115"
                                style="width: 0.01px;"
                              >
                                <span>
                                  ​
                                </span>
                              </legend>
                            </fieldset>
                          </div>
                        </div>
                      </div>
                      <div
                        class="makeStyles-fileUpload-90"
                      >
                        <span
                          class="makeStyles-fileUploadText-91"
                        >
                          Upload Photo
                        </span>
                        <button
                          aria-label="upload image"
                          class="MuiButtonBase-root MuiIconButton-root makeStyles-iconUpload-107"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM14 13v4h-4v-4H7l5-5 5 5h-3z"
                              />
                            </svg>
                          </span>
                        </button>
                      </div>
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="makeStyles-profileFormPaddingTop-119"
          >
            <div
              class="MuiGrid-root MuiGrid-container"
            >
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-12"
              >
                <div
                  class="makeStyles-errorInputWrapper-122"
                >
                  <div
                    class="MuiFormControl-root makeStyles-formControl-87 makeStyles-inputBottomPadding-118"
                  >
                    <h1
                      class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                    >
                      First Name
                       
                    </h1>
                    <div>
                      <div
                        class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                        data-testid="profile-first-name-wrapper"
                      >
                        <div
                          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                        >
                          <input
                            aria-invalid="false"
                            autocomplete="off"
                            class="MuiInputBase-input MuiOutlinedInput-input"
                            data-testid="profile-first-name"
                            name="firstName"
                            placeholder="First Name"
                            required=""
                            type="text"
                            value=""
                          />
                          <fieldset
                            aria-hidden="true"
                            class="PrivateNotchedOutline-root-114 MuiOutlinedInput-notchedOutline"
                            style="padding-left: 8px;"
                          >
                            <legend
                              class="PrivateNotchedOutline-legend-115"
                              style="width: 0.01px;"
                            >
                              <span>
                                ​
                              </span>
                            </legend>
                          </fieldset>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="makeStyles-errorInputWrapper-122"
                >
                  <div
                    class="MuiFormControl-root makeStyles-formControl-87 makeStyles-inputBottomPadding-118"
                  >
                    <h1
                      class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                    >
                      Last Name
                       
                    </h1>
                    <div>
                      <div
                        class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                        data-testid="profile-last-name-wrapper"
                      >
                        <div
                          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                        >
                          <input
                            aria-invalid="false"
                            autocomplete="off"
                            class="MuiInputBase-input MuiOutlinedInput-input"
                            data-testid="profile-last-name"
                            name="lastName"
                            placeholder="Last Name"
                            type="text"
                            value=""
                          />
                          <fieldset
                            aria-hidden="true"
                            class="PrivateNotchedOutline-root-114 MuiOutlinedInput-notchedOutline"
                            style="padding-left: 8px;"
                          >
                            <legend
                              class="PrivateNotchedOutline-legend-115"
                              style="width: 0.01px;"
                            >
                              <span>
                                ​
                              </span>
                            </legend>
                          </fieldset>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="makeStyles-errorInputWrapper-122"
                >
                  <div
                    class="MuiFormControl-root makeStyles-formControl-87 makeStyles-inputBottomPadding-118"
                  >
                    <h1
                      class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                    >
                      Email
                       
                    </h1>
                    <div>
                      <div
                        class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                        data-testid="profile-email"
                      >
                        <div
                          class="MuiInputBase-root MuiOutlinedInput-root Mui-disabled Mui-disabled MuiInputBase-fullWidth MuiInputBase-formControl"
                        >
                          <input
                            aria-invalid="false"
                            autocomplete="off"
                            class="MuiInputBase-input MuiOutlinedInput-input Mui-disabled Mui-disabled"
                            data-testid="email"
                            disabled=""
                            name="email"
                            placeholder="Email"
                            type="text"
                            value=""
                          />
                          <fieldset
                            aria-hidden="true"
                            class="PrivateNotchedOutline-root-114 MuiOutlinedInput-notchedOutline"
                            style="padding-left: 8px;"
                          >
                            <legend
                              class="PrivateNotchedOutline-legend-115"
                              style="width: 0.01px;"
                            >
                              <span>
                                ​
                              </span>
                            </legend>
                          </fieldset>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="makeStyles-errorInputWrapper-122"
                >
                  <div
                    class="MuiFormControl-root makeStyles-formControl-87 makeStyles-inputBottomPadding-118"
                  >
                    <h1
                      class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                    >
                      Mobile Phone Number
                       
                    </h1>
                    <div>
                      <div
                        class="makeStyles-phoneInput-216 undefined  react-tel-input"
                      >
                        <div
                          class="special-label"
                        >
                          Phone
                        </div>
                        <input
                          autocomplete="off"
                          class=" form-control"
                          data-testid="mobile-user-phone"
                          name="mobilePhoneNumber"
                          placeholder="+0 (000) 000-0000"
                          type="text"
                          value=""
                          variant="outlined"
                        />
                        <div
                          class=" flag-dropdown"
                        >
                          <div
                            aria-haspopup="listbox"
                            class="selected-flag"
                            role="button"
                            tabindex="-1"
                            title=""
                          >
                            <div
                              class="flag 0"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-9 MuiGrid-grid-lg-9"
                  >
                    <div
                      class="MuiFormControl-root makeStyles-formControl-87 makeStyles-inputBottomPadding-118 makeStyles-middleInput-156"
                    >
                      <h1
                        class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                      >
                        Office Phone Number (Optional)
                         
                      </h1>
                      <div>
                        <div
                          class="makeStyles-phoneInput-216 undefined  react-tel-input"
                        >
                          <div
                            class="special-label"
                          >
                            Phone
                          </div>
                          <input
                            autocomplete="off"
                            class=" form-control"
                            data-testid="office-user-phone"
                            id="officePhoneNumber"
                            name="officePhoneNumber"
                            placeholder="+0 (000) 000-0000"
                            type="text"
                            value=""
                            variant="outlined"
                          />
                          <div
                            class=" flag-dropdown"
                          >
                            <div
                              aria-haspopup="listbox"
                              class="selected-flag"
                              role="button"
                              tabindex="-1"
                              title=""
                            >
                              <div
                                class="flag 0"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-lg-3"
                  >
                    <div
                      class="MuiFormControl-root makeStyles-formControl-87 makeStyles-inputBottomPadding-118"
                    >
                      <h1
                        class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                      >
                        Ext
                         
                      </h1>
                      <div>
                        <div
                          class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                        >
                          <div
                            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                          >
                            <input
                              aria-invalid="false"
                              autocomplete="off"
                              class="MuiInputBase-input MuiOutlinedInput-input"
                              data-testid="office-user-phone"
                              maxlength="6"
                              name="officePhoneExtension"
                              placeholder="Ext"
                              type="text"
                              value=""
                            />
                            <fieldset
                              aria-hidden="true"
                              class="PrivateNotchedOutline-root-114 MuiOutlinedInput-notchedOutline"
                              style="padding-left: 8px;"
                            >
                              <legend
                                class="PrivateNotchedOutline-legend-115"
                                style="width: 0.01px;"
                              >
                                <span>
                                  ​
                                </span>
                              </legend>
                            </fieldset>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="makeStyles-errorInputWrapper-122"
                >
                  <div
                    class=" makeStyles-controlledRadioContainer-220 controlledRadioContainer"
                    data-testid="controlled-radio"
                  >
                    <fieldset
                      class="MuiFormControl-root makeStyles-radioWrapper-172"
                    >
                      <legend
                        class="MuiFormLabel-root makeStyles-controlledRadioLabel-219"
                        id="radio-label-preferredContactMethod"
                      >
                        Preferred Contact Method
                      </legend>
                      <div
                        aria-labelledby="radio-label-preferredContactMethod"
                        class="MuiFormGroup-root MuiFormGroup-row"
                        data-testid="controlled-radio-group"
                        role="radiogroup"
                      >
                        <label
                          class="MuiFormControlLabel-root"
                        >
                          <span
                            aria-disabled="false"
                            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-227 MuiRadio-root makeStyles-root-221 PrivateSwitchBase-checked-228 Mui-checked"
                          >
                            <span
                              class="MuiIconButton-label"
                            >
                              <input
                                checked=""
                                class="PrivateSwitchBase-input-230"
                                data-testid="controlled-radio-button"
                                name="preferredContactMethod"
                                type="radio"
                                value="0"
                              />
                              <span
                                class="makeStyles-icon-222 makeStyles-checkedIcon-225 "
                              />
                            </span>
                          </span>
                          <span
                            class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                          >
                            Email
                          </span>
                        </label>
                        <label
                          class="MuiFormControlLabel-root"
                        >
                          <span
                            aria-disabled="false"
                            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-227 MuiRadio-root makeStyles-root-221"
                          >
                            <span
                              class="MuiIconButton-label"
                            >
                              <input
                                class="PrivateSwitchBase-input-230"
                                data-testid="controlled-radio-button"
                                name="preferredContactMethod"
                                type="radio"
                                value="1"
                              />
                              <span
                                class="makeStyles-icon-222 makeStyles-unactiveIcon-224"
                              />
                            </span>
                          </span>
                          <span
                            class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                          >
                            Phone
                          </span>
                        </label>
                      </div>
                    </fieldset>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="makeStyles-formButtonWrapper-120"
            >
              <span
                class=""
                data-testid="controlled-button"
                tabindex="-1"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-discardButton-144 MuiButton-textPrimary Mui-disabled Mui-disabled"
                  data-testid="discard-changes-btn"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    Discard Changes
                  </span>
                </button>
              </span>
              <span
                class=""
                data-testid="controlled-button"
                tabindex="-1"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-contained false makeStyles-nextButton-143 makeStyles-noPadding-140 MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge Mui-disabled Mui-disabled"
                  data-testid="confirm-btn"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    <span
                      class="makeStyles-textWrapper-233"
                    >
                      Save Changes
                    </span>
                  </span>
                </button>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Settings should render tabs 1`] = `
<div>
  <div
    style="width: 100%; background-color: rgb(245, 245, 245); padding: 2.5rem;"
  >
    <div
      class="MuiBox-root MuiBox-root-488"
      style="height: 50px; margin-bottom: 13px; width: 100%;"
    >
      <div
        class="MuiBox-root MuiBox-root-489"
        style="display: flex; align-items: center; justify-content: space-between;"
      >
        <div>
          <div
            class="MuiBox-root MuiBox-root-490"
            style="display: flex; align-items: center; margin-top: 5px;"
          >
            <h2
              class="MuiTypography-root MuiTypography-h1"
              style="color: rgb(68, 68, 68); font-size: 2.25rem; font-weight: 600; letter-spacing: 0; margin-right: 0.5rem;"
            >
              Account Settings
            </h2>
          </div>
        </div>
      </div>
    </div>
    <div
      class="makeStyles-tableWrapper-449"
    >
      <div
        class="makeStyles-filterContainer-457 makeStyles-filterContainerTopPadding-466"
      >
        <div
          class="makeStyles-statusFilter-458"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text"
            data-testid="filter-status-opt"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Profile
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text"
            data-testid="filter-status-opt"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Password
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-activeFilter-459"
            data-testid="filter-status-opt"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Integrations
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiCard-root makeStyles-root-667 MuiPaper-elevation1 MuiPaper-rounded"
    >
      <div
        class="MuiCardContent-root"
      >
        <div
          class="makeStyles-containerLogo-673"
        >
          <img
            alt="logo-procore"
            class="makeStyles-logo-672"
            src="procore.logo.png"
          />
        </div>
        <p
          class="MuiTypography-root makeStyles-title-669 MuiTypography-body1"
        >
          Procore
        </p>
        <p
          class="MuiTypography-root makeStyles-body-668 MuiTypography-body1"
        >
          This Integration allows you to 
          <br />
          Synchronize information between Procore and 
          <br />
          FC Analytics in an Easy way.
        </p>
      </div>
      <div
        class="MuiCardActions-root MuiCardActions-spacing"
      >
        <div
          class="makeStyles-containerButtons-670"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-createButton-575 makeStyles-primaryButtonLarge-577 makeStyles-marginButtons-671 MuiButton-outlinedPrimary"
            data-testid="watch-tutorial-button"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Watch Tutorial
            </span>
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-createButton-575 makeStyles-primaryButtonLarge-577 makeStyles-marginButtons-671 makeStyles-primaryButtonDisableHover-578 makeStyles-primaryColor-674"
            data-testid="connect-button"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Connect
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Settings should render tabs 2`] = `
<div>
  <div
    style="width: 100%; background-color: rgb(245, 245, 245); padding: 2.5rem;"
  >
    <div
      class="MuiBox-root MuiBox-root-488"
      style="height: 50px; margin-bottom: 13px; width: 100%;"
    >
      <div
        class="MuiBox-root MuiBox-root-489"
        style="display: flex; align-items: center; justify-content: space-between;"
      >
        <div>
          <div
            class="MuiBox-root MuiBox-root-490"
            style="display: flex; align-items: center; margin-top: 5px;"
          >
            <h2
              class="MuiTypography-root MuiTypography-h1"
              style="color: rgb(68, 68, 68); font-size: 2.25rem; font-weight: 600; letter-spacing: 0; margin-right: 0.5rem;"
            >
              Account Settings
            </h2>
          </div>
        </div>
      </div>
    </div>
    <div
      class="makeStyles-tableWrapper-449"
    >
      <div
        class="makeStyles-filterContainer-457 makeStyles-filterContainerTopPadding-466"
      >
        <div
          class="makeStyles-statusFilter-458"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-activeFilter-459"
            data-testid="filter-status-opt"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Profile
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text"
            data-testid="filter-status-opt"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Password
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text"
            data-testid="filter-status-opt"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Integrations
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-697 makeStyles-box-694"
    >
      <div
        class="makeStyles-formContainer-696 "
      >
        <div
          class="makeStyles-formContainerWrapper-695"
        >
          <div
            class="makeStyles-profileUploadWrapper-711"
          >
            <div
              class="makeStyles-profileUploadAvatarPosition-712"
            >
              <div
                class="MuiAvatar-root MuiAvatar-circle makeStyles-avatarSettings-724 makeStyles-avatarWrapper-718 MuiAvatar-colorDefault"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root makeStyles-missingAvatarSettings-728"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                  />
                </svg>
              </div>
            </div>
            <div
              class="makeStyles-profileUploadInput-713"
            >
              <div
                class="MuiFormControl-root makeStyles-formControl-738 "
              >
                <h1
                  class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                >
                  Profile Image
                   
                </h1>
                <div>
                  <div
                    class="makeStyles-singleInputUploadItem-757"
                  >
                    <label
                      class="makeStyles-fileUploadWrapper-698 makeStyles-fileUploadWrapper-740"
                    >
                      <div
                        data-testid="file-upload-wrapper"
                      >
                        <div
                          class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                        >
                          <div
                            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                          >
                            <input
                              aria-invalid="false"
                              autocomplete="off"
                              class="MuiInputBase-input MuiOutlinedInput-input"
                              data-testid="file-upload-input"
                              name="fileUploader"
                              placeholder="Upload Photo"
                              type="file"
                              value=""
                            />
                            <fieldset
                              aria-hidden="true"
                              class="PrivateNotchedOutline-root-765 MuiOutlinedInput-notchedOutline"
                              style="padding-left: 8px;"
                            >
                              <legend
                                class="PrivateNotchedOutline-legend-766"
                                style="width: 0.01px;"
                              >
                                <span>
                                  ​
                                </span>
                              </legend>
                            </fieldset>
                          </div>
                        </div>
                      </div>
                      <div
                        class="makeStyles-fileUpload-741"
                      >
                        <span
                          class="makeStyles-fileUploadText-742"
                        >
                          Upload Photo
                        </span>
                        <button
                          aria-label="upload image"
                          class="MuiButtonBase-root MuiIconButton-root makeStyles-iconUpload-758"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM14 13v4h-4v-4H7l5-5 5 5h-3z"
                              />
                            </svg>
                          </span>
                        </button>
                      </div>
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="makeStyles-profileFormPaddingTop-770"
          >
            <div
              class="MuiGrid-root MuiGrid-container"
            >
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-12"
              >
                <div
                  class="makeStyles-errorInputWrapper-773"
                >
                  <div
                    class="MuiFormControl-root makeStyles-formControl-738 makeStyles-inputBottomPadding-769"
                  >
                    <h1
                      class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                    >
                      First Name
                       
                    </h1>
                    <div>
                      <div
                        class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                        data-testid="profile-first-name-wrapper"
                      >
                        <div
                          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                        >
                          <input
                            aria-invalid="false"
                            autocomplete="off"
                            class="MuiInputBase-input MuiOutlinedInput-input"
                            data-testid="profile-first-name"
                            name="firstName"
                            placeholder="First Name"
                            required=""
                            type="text"
                            value=""
                          />
                          <fieldset
                            aria-hidden="true"
                            class="PrivateNotchedOutline-root-765 MuiOutlinedInput-notchedOutline"
                            style="padding-left: 8px;"
                          >
                            <legend
                              class="PrivateNotchedOutline-legend-766"
                              style="width: 0.01px;"
                            >
                              <span>
                                ​
                              </span>
                            </legend>
                          </fieldset>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="makeStyles-errorInputWrapper-773"
                >
                  <div
                    class="MuiFormControl-root makeStyles-formControl-738 makeStyles-inputBottomPadding-769"
                  >
                    <h1
                      class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                    >
                      Last Name
                       
                    </h1>
                    <div>
                      <div
                        class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                        data-testid="profile-last-name-wrapper"
                      >
                        <div
                          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                        >
                          <input
                            aria-invalid="false"
                            autocomplete="off"
                            class="MuiInputBase-input MuiOutlinedInput-input"
                            data-testid="profile-last-name"
                            name="lastName"
                            placeholder="Last Name"
                            type="text"
                            value=""
                          />
                          <fieldset
                            aria-hidden="true"
                            class="PrivateNotchedOutline-root-765 MuiOutlinedInput-notchedOutline"
                            style="padding-left: 8px;"
                          >
                            <legend
                              class="PrivateNotchedOutline-legend-766"
                              style="width: 0.01px;"
                            >
                              <span>
                                ​
                              </span>
                            </legend>
                          </fieldset>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="makeStyles-errorInputWrapper-773"
                >
                  <div
                    class="MuiFormControl-root makeStyles-formControl-738 makeStyles-inputBottomPadding-769"
                  >
                    <h1
                      class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                    >
                      Email
                       
                    </h1>
                    <div>
                      <div
                        class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                        data-testid="profile-email"
                      >
                        <div
                          class="MuiInputBase-root MuiOutlinedInput-root Mui-disabled Mui-disabled MuiInputBase-fullWidth MuiInputBase-formControl"
                        >
                          <input
                            aria-invalid="false"
                            autocomplete="off"
                            class="MuiInputBase-input MuiOutlinedInput-input Mui-disabled Mui-disabled"
                            data-testid="email"
                            disabled=""
                            name="email"
                            placeholder="Email"
                            type="text"
                            value=""
                          />
                          <fieldset
                            aria-hidden="true"
                            class="PrivateNotchedOutline-root-765 MuiOutlinedInput-notchedOutline"
                            style="padding-left: 8px;"
                          >
                            <legend
                              class="PrivateNotchedOutline-legend-766"
                              style="width: 0.01px;"
                            >
                              <span>
                                ​
                              </span>
                            </legend>
                          </fieldset>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="makeStyles-formButtonWrapper-771"
            >
              <span
                class=""
                data-testid="controlled-button"
                tabindex="-1"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-discardButton-592 MuiButton-textPrimary Mui-disabled Mui-disabled"
                  data-testid="discard-changes-btn"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    Discard Changes
                  </span>
                </button>
              </span>
              <span
                class=""
                data-testid="controlled-button"
                tabindex="-1"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-contained false makeStyles-nextButton-591 makeStyles-noPadding-588 MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge Mui-disabled Mui-disabled"
                  data-testid="confirm-btn"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    <span
                      class="makeStyles-textWrapper-842"
                    >
                      Save Changes
                    </span>
                  </span>
                </button>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Settings should render tabs 3`] = `
<div>
  <div
    style="width: 100%; background-color: rgb(245, 245, 245); padding: 2.5rem;"
  >
    <div
      class="MuiBox-root MuiBox-root-488"
      style="height: 50px; margin-bottom: 13px; width: 100%;"
    >
      <div
        class="MuiBox-root MuiBox-root-489"
        style="display: flex; align-items: center; justify-content: space-between;"
      >
        <div>
          <div
            class="MuiBox-root MuiBox-root-490"
            style="display: flex; align-items: center; margin-top: 5px;"
          >
            <h2
              class="MuiTypography-root MuiTypography-h1"
              style="color: rgb(68, 68, 68); font-size: 2.25rem; font-weight: 600; letter-spacing: 0; margin-right: 0.5rem;"
            >
              Account Settings
            </h2>
          </div>
        </div>
      </div>
    </div>
    <div
      class="makeStyles-tableWrapper-449"
    >
      <div
        class="makeStyles-filterContainer-457 makeStyles-filterContainerTopPadding-466"
      >
        <div
          class="makeStyles-statusFilter-458"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text"
            data-testid="filter-status-opt"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Profile
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-activeFilter-459"
            data-testid="filter-status-opt"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Password
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text"
            data-testid="filter-status-opt"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Integrations
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-843 makeStyles-box-694"
    >
      <div
        class="makeStyles-formContainer-696 "
      >
        <div
          class="makeStyles-formContainerWrapper-695"
        >
          <div
            class="makeStyles-currentPasswordSpacing-715"
          >
            <div
              class="MuiFormControl-root makeStyles-formControl-738 makeStyles-loginLabels-736 "
            >
              <h1
                class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
              >
                Current Password
                 
              </h1>
              <div
                data-testid="confirm-password-wrapper"
              >
                <div
                  aria-describedby="confirm-password-password"
                  class="MuiFormControl-root MuiTextField-root makeStyles-textField-737 MuiFormControl-fullWidth"
                >
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
                  >
                    <div
                      class="MuiInputAdornment-root     makeStyles-loginIcons-735 MuiInputAdornment-positionStart"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
                        />
                      </svg>
                    </div>
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                      data-testid="current-password"
                      name="currentPassword"
                      placeholder="Current Password"
                      required=""
                      type="password"
                      value=""
                    />
                    <div
                      class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                    >
                      <button
                        aria-label="toggle-visibility"
                        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd"
                        data-testid="toggle-visibility-button"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <svg
                            class=" makeStyles-inactiveIcon-846 makeStyles-inactiveIcon-846"
                          >
                            visibility-off.svg
                          </svg>
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </button>
                    </div>
                    <fieldset
                      aria-hidden="true"
                      class="PrivateNotchedOutline-root-765 MuiOutlinedInput-notchedOutline"
                      style="padding-left: 8px;"
                    >
                      <legend
                        class="PrivateNotchedOutline-legend-766"
                        style="width: 0.01px;"
                      >
                        <span>
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiFormControl-root makeStyles-formControl-738 makeStyles-loginLabels-736 "
          >
            <h1
              class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
            >
              New Password
               
            </h1>
            <div
              data-testid="confirm-password-wrapper"
            >
              <div
                aria-describedby="confirm-password-password"
                class="MuiFormControl-root MuiTextField-root makeStyles-textField-737 MuiFormControl-fullWidth"
              >
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
                >
                  <div
                    class="MuiInputAdornment-root     makeStyles-loginIcons-735 MuiInputAdornment-positionStart"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
                      />
                    </svg>
                  </div>
                  <input
                    aria-invalid="false"
                    autocomplete="off"
                    class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                    data-testid="password"
                    name="newPassword"
                    placeholder="New Password"
                    required=""
                    type="password"
                    value=""
                  />
                  <div
                    class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                  >
                    <button
                      aria-label="toggle-visibility"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd"
                      data-testid="toggle-visibility-button"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <svg
                          class=" makeStyles-inactiveIcon-846 makeStyles-inactiveIcon-846"
                        >
                          visibility-off.svg
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-765 MuiOutlinedInput-notchedOutline"
                    style="padding-left: 8px;"
                  >
                    <legend
                      class="PrivateNotchedOutline-legend-766"
                      style="width: 0.01px;"
                    >
                      <span>
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
          </div>
          <p
            class="MuiTypography-root makeStyles-inputSubtitle-852 MuiTypography-body1"
          >
            Password must have at least 8 characters, one lowercase letter, one uppercase letter, one number and one symbol.
          </p>
          <div
            class="MuiFormControl-root makeStyles-formControl-738 makeStyles-loginLabels-736 "
          >
            <h1
              class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
            >
              Confirm New Password
               
            </h1>
            <div
              data-testid="confirm-password-wrapper"
            >
              <div
                aria-describedby="confirm-password-password"
                class="MuiFormControl-root MuiTextField-root makeStyles-textField-737 MuiFormControl-fullWidth"
              >
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
                >
                  <div
                    class="MuiInputAdornment-root     makeStyles-loginIcons-735 MuiInputAdornment-positionStart"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
                      />
                    </svg>
                  </div>
                  <input
                    aria-invalid="false"
                    autocomplete="off"
                    class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                    data-testid="confirm-password"
                    name="confirmPassword"
                    placeholder="Confirm New Password"
                    required=""
                    type="password"
                    value=""
                  />
                  <div
                    class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                  >
                    <button
                      aria-label="toggle-visibility"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd"
                      data-testid="toggle-visibility-button"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <svg
                          class=" makeStyles-inactiveIcon-846 makeStyles-inactiveIcon-846"
                        >
                          visibility-off.svg
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-765 MuiOutlinedInput-notchedOutline"
                    style="padding-left: 8px;"
                  >
                    <legend
                      class="PrivateNotchedOutline-legend-766"
                      style="width: 0.01px;"
                    >
                      <span>
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="makeStyles-formButtonWrapper-709 makeStyles-passwordButtonWrapper-710"
        >
          <span
            class="makeStyles-noOutline-590"
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-discardButton-592 MuiButton-textPrimary Mui-disabled Mui-disabled"
              data-testid="discard-changes-btn"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Discard Changes
              </span>
            </button>
          </span>
          <span
            class=""
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained false makeStyles-nextButton-591 makeStyles-noPadding-588  MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge Mui-disabled Mui-disabled"
              data-testid="next-changes-btn"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <span
                  class="makeStyles-textWrapper-842"
                >
                  Save Changes
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
